<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalendarActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:onClick="weeklyAction"
        android:text="Weekly"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp">
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/back"
        android:textColor="@color/white"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="previousMonthAction"
        android:textSize="20sp"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/monthYearTV"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/curr_month"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/forward"
        android:textColor="@color/white"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="nextMonthAction"
        android:textSize="20sp"
        tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:textColor="@color/white">




    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mon"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tue"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/wed"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/thu"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fri"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sat"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sun"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="16sp"/>


</LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="357dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="76dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newEventAction"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.629"
            tools:ignore="SpeakableTextPresentCheck" />
        <!--            android:icon="@drawable/ic_add"-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/eventListViewC"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
